# bridgeit-skeleton

backend/: db.sqlite3  pyproject.toml  redis_client.py
backend/api/: admin.py  controllers.py  middleware.py  models.py  services.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/app/: page.js
frontend/app/services/: mobile.js
